Started pulling match history need to write it Goodnight me

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -27,7 +27,7 @@
       {% block navbar %}
       {% endblock %}
       <div class="jumbotron bg-dark">
-        <form method="post">
+        <form method="post" style="text-align: center;">
           {{ form.csrf_token() }}
           {{ render_field(form.search) }}
           {{ render_field(form.submit) }}
