--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -14,7 +14,7 @@
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
-  <body style='background-image: url("http://ddragon.leagueoflegends.com/cdn/6.8.1/img/map/map1.png");  background-position: center; background-repeat: no-repeat; background-size: cover;'>
+  <body style='background-image: url("/../../static/map1.png");  background-position: center; background-repeat: no-repeat; background-size: cover;'>
     <!-- Your page contont -->
     {% block content %}{% endblock%}
 
